# tpm-ssh-agent

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
slb9673_driver/: error.rs  keyman.rs  main.rs  saved_state.rs  state.rs
slb9673_driver/driver/: hidapi.rs  i2cdev.rs
src/: lib.rs  main.rs  tpm.rs  util.rs
src/driver/: hidapi.rs  i2cdev.rs  mod.rs
src/tpm/: command.rs  core_impl.rs  mod.rs  tpm.rs
tpm-attestation/: endorsement_key.rs  error.rs  main.rs
tpm-attestation/driver/: hidapi.rs  i2cdev.rs
tpm-ssh-agent/: agent.rs  error.rs  keyman.rs  main.rs
tpm-ssh-agent/driver/: hidapi.rs  i2cdev.rs  mod.rs
tpm_i2c/: lib.rs
tpm_i2c/tpm/: command.rs  core_impl.rs  i2c.rs  mod.rs  session.rs
tpm_i2c/tpm/commands/: capability.rs  context.rs  enhanced_authorization.rs  hierarchy.rs  mod.rs  nv_storage.rs  object.rs  random_number_generator.rs  session.rs  sign_and_verify.rs  startup.rs  testing.rs
tpm_i2c/tpm/crypto/: kdf.rs  mod.rs
tpm_i2c/tpm/structure/: algorithm.rs  attributes.rs  authorization.rs  buffers.rs  capabilities.rs  command.rs  commands.rs  constants.rs  creation_data.rs  crypto.rs  interface.rs  macro_defs.rs  mod.rs  nv_storage.rs  primitive_types.rs  response.rs  tickets.rs
tpm_i2c/tpm/structure/algorithm/: asymmetric.rs  ecc.rs  identifiers.rs  kdf.rs  mod.rs  rsa.rs  signature.rs  symmetric.rs
tpm_i2c/tpm/structure/key_and_object/: mod.rs  public_area.rs
tpm_i2c/tpm/tcti/: chrdev.rs  i2c.rs  mod.rs
