[package]
name = "slb9673_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tpm_i2c"
path = "tpm_i2c/lib.rs"

[[bin]]
name = "slb9673_driver"
path = "slb9673_driver/main.rs"

[features]
default = ["hidapi"]
hidapi = ["dep:hidapi"]
i2cdev = ["dep:i2cdev"]

[dependencies]
bitfield-struct = "0.5.2"
bitflags = "2.3.3"
hidapi = { version = "2.4.1", optional = true }
i2cdev = { version = "0.5.1", optional = true }
num-derive = "0.4.0"
num-traits = "0.2.16"
