[package]
name = "tpm-ssh-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tpm_i2c"
path = "tpm_i2c/lib.rs"

[[bin]]
name = "tpm-ssh-agent"
path = "tpm-ssh-agent/main.rs"

[[bin]]
name = "tpm-attestation"
path = "tpm-attestation/main.rs"

[features]
default = ["hidapi"]
hidapi = ["dep:hidapi"]
i2cdev = ["dep:i2cdev"]

[dependencies]
bitfield-struct = "0.5.2"
bitflags = "2.3.3"
ctrlc = "3.4.0"
digest = "0.10.7"
enum-iterator = "1.4.1"
hex-literal = "0.4.1"
hidapi = { version = "2.4.1", optional = true }
hmac = "0.12.1"
i2cdev = { version = "0.5.1", optional = true }
num-derive = "0.4.0"
num-traits = "0.2.16"
rand = "0.8.5"
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha3 = "0.10.8"
sm3 = "0.4.2"
ssh-agent-lib = "0.2.5"
ssh-key = { version = "0.5.1", features = ["rsa"] }
subenum = "1.0.1"
tokio = "1.30.0"
crossbeam-utils = "0.8.7"
